<resources>
    <string name="app_name">Close-Up</string>
    <string name="text_help">Use the search form above to search for movies, TV shows and people</string>
    <string name="msg_overview_empty">Overview not available…</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="credits">Credits</string>
    <string name="genres">Genres</string>
    <string name="production_companies">Production Companies</string>
    <string name="production_countries">Production Countries</string>
    <string name="curiosities">Curiosities</string>
    <string name="revenue">Revenue</string>
    <string name="orig_language">Orig. Language</string>
    <string name="popularity">Popularity</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="videos">Videos</string>
    <string name="similar">Similar</string>
    <string name="orig_country">Orig. Country</string>
    <string name="movies">Movies</string>
    <string name="tv_series">Tv Series</string>
    <string name="see_seasons_and_episodes">See Seasons and Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="text_no_favorites">You do not have any favorites yet :(\nFind movies, shows, and people and add them to your favorites.</string>
    <string name="search_not_found">Oops! We could not find any results for your search.</string>

</resources>
