<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/curiosities"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/text_revenue"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/revenue"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/result_revenue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/result_revenue"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1200.500.00" />


            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/text_o_language"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/orig_language"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/result_o_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_revenue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/result_o_language"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_revenue"
                tools:text="en-US" />


            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/text_popularity"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/popularity"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/result_popularity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_o_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/result_popularity"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_o_language"
                tools:text="208.80" />


            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/text_avg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/vote_average"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/result_avg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_popularity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/result_avg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_popularity"
                tools:text="8.5" />


            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/text_vote_count"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/vote_count"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/result_vote_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_avg" />

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:id="@+id/result_vote_count"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_avg"
                tools:text="400" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
